# card-fraud-platform

./: .gitignore  AGENTS.md  README.md  RESOURCE-LIMITS-APPLIED.md  SECRETS_OWNERSHIP.md  clone-all.ps1  docker-compose.apps.yml  docker-compose.override.jfr.yml  docker-compose.override.local.yml  docker-compose.yml  doppler.yaml  pyproject.toml
control-plane/: services.yaml
control-plane/ownership/: auth.yaml  database.yaml  messaging.yaml  secrets.yaml  storage.yaml
docker/: prometheus.yml
docs/: README.md  codemap.md
docs/01-setup/: README.md
docs/02-development/: README.md
docs/02-development/platform-control-plane/: 00-operating-model.md  01-admin-action-contract.md  02-inventory-and-observability-model.md  03-secrets-and-configuration-ownership.md  04-docs-and-governance-model.md  05-card-fraud-platform.md  06-card-fraud-rule-management.md  07-card-fraud-rule-engine-auth.md  08-card-fraud-rule-engine-monitoring.md  13-cross-repo-summary.md  (+16 more)
docs/03-api/: README.md
docs/05-deployment/: README.md
docs/06-operations/: README.md
docs/07-reference/: README.md  secrets-ownership.md
init-db/: 01-create-users.sql
scripts/: _runner.py  constants.py  infra_only.py  platform_check.py  platform_down.py  platform_status.py  platform_up.py  platformctl.py  sync_platform_configs.py  sync_shared_secrets.py
scripts/control_plane/: __init__.py  action_runner.py  adapter_manifest.py  audit.py  confirm.py  health.py  models.py  registry.py  result.py  timeouts.py
tests/: test_control_plane_collectors.py  test_platform_quality.py  test_platformctl_action.py
(+15 files in other folders)
